css alignment fixes

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -9,7 +9,6 @@
 html,body {
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
 }
 
 html {
@@ -66,14 +65,14 @@ li {
 
 #header {
     height: 100%;
+    min-height: 550px;
 }
 
 #about {
     position: relative;
-    background-color: rgba(255,255,255,0.7);
-    padding-top: 100px;
-    z-index: 100;
+    padding-top: 50px;
     display: table;
+    height: 100%;
 }
 
 
